# ppmlx

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: homebrew-update.yml
docs/: cross-tool-flows.md  mcp-server-spec.md
extensions/pi-ppmlx-memory/: index.ts
homebrew/Formula/: ppmlx.rb
ppmlx/: __init__.py  analytics.py  cli.py  compact_eval.py  config.py  context_reducer.py  contrastive_retriever.py  decomposed_engine.py  dense_chunker.py  engine.py  graph_view.py  mcp_server.py  memory_engine.py  memory_eval.py  memory_extractors.py  memory_ingest_bench.py  memory_store.py  models.py  quality_bench.py  registry_fetch.py  server.py  tool_distillers.py  trace_replay.py
ppmlx/tui/: __init__.py  _browser.py  _config.py  _memory_config.py  _model_picker.py  _multi_picker.py  _style.py
scripts/: install.sh
tests/: test_analytics.py  test_cli.py  test_compact_eval.py  test_config.py  test_context_reducer.py  test_graph_view.py  test_memory_engine.py  test_memory_eval.py  test_memory_extractors.py  test_memory_ingest_bench.py  test_models.py  test_quality_bench.py  test_registry_fetch.py  test_server.py  test_tool_distillers.py  test_trace_replay.py
