[project]
name = "ppmlx"
version = "0.5.0"
description = "CLI for running LLMs on Apple Silicon via MLX"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Rafał Wyderka", email = "rafal@ppmlx.dev" },
]
keywords = ["mlx", "llm", "apple-silicon", "inference", "ollama", "local-ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx-lm>=0.22 ; sys_platform == 'darwin'",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "rich>=13.0",
    "huggingface-hub>=0.24",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "httpx>=0.27",
    "questionary>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
# Vision / multimodal models
vision = ["mlx-vlm>=0.1.18 ; sys_platform == 'darwin'"]
# Local text embeddings
embeddings = ["mlx-embeddings>=0.0.5 ; sys_platform == 'darwin'"]
# Anonymous product analytics sink for maintainers/self-hosters
analytics = ["posthog>=7.9,<8"]
# Everything bundled
all = [
    "ppmlx[vision]",
    "ppmlx[embeddings]",
    "ppmlx[analytics]",
]

[project.urls]
Homepage = "https://ppmlx.dev"
Repository = "https://github.com/the-focus-company/ppmlx"
Issues = "https://github.com/the-focus-company/ppmlx/issues"
Documentation = "https://github.com/the-focus-company/ppmlx#readme"

[project.scripts]
ppmlx = "ppmlx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.14", "httpx>=0.27", "anyio>=4.0", "ruff>=0.8", "mypy>=1.10"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/ppmlx",
    "/tests",
]
exclude = [
    "/ppmlx/__pycache__",
    "/tests/__pycache__",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E701", "E401", "E702"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401", "F841"]
"ppmlx/server.py" = ["E402"]
"ppmlx/cli.py" = ["F401", "F821"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["ppmlx"]
